<?xml version="1.0" encoding="utf-8"?>
<layout>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:background="@color/white"
        android:focusable="true"
        android:id="@+id/tap_game_container"
        android:clickable="true">

        <TextView
            android:id="@+id/tap_time_left"
            android:layout_width="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:text="@string/time_left"
            android:textColor="@color/purple_700"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tap_action"
            android:layout_width="wrap_content"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content"
            android:text="@string/tap"
            android:textColor="@color/purple_700"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tap_score"
            android:layout_width="wrap_content"
            android:layout_marginBottom="50dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_height="wrap_content"
            android:text="@string/score"
            android:textColor="@color/purple_700"
            android:textSize="16sp" />
    </RelativeLayout>
</layout>