<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/settings_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/settings_title"
            android:textColor="@color/purple_700"
            android:textSize="22sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/game_drag_n_drop"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="DragNDrop"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="15dp"
                android:layout_height="wrap_content"/>

            <ImageView
                android:id="@+id/game_drag_n_drop_image"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="15dp"
                app:srcCompat="@android:drawable/star_big_on" />

            <TextView
                android:id="@+id/game_drag_n_drop_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:layout_marginRight="15dp"
                android:text="42" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/game_swipe"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="Swipe"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="15dp"
                android:layout_height="wrap_content"/>

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="15dp"
                app:srcCompat="@android:drawable/star_big_on" />

            <TextView
                android:id="@+id/game_swipe_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:layout_marginRight="15dp"
                android:text="42" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/game_fast_tap"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="Fast Tap"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="15dp"
                android:layout_height="wrap_content"/>

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="15dp"
                app:srcCompat="@android:drawable/star_big_on" />

            <TextView
                android:id="@+id/game_fast_tap_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:layout_marginRight="15dp"
                android:text="42" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/game_ipac_game"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="Ipac Game"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="15dp"
                android:layout_height="wrap_content"/>

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="15dp"
                app:srcCompat="@android:drawable/star_big_on" />

            <TextView
                android:id="@+id/game_ipac_game_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:layout_marginRight="15dp"
                android:text="42" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/settings_disconnection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cardview_dark_background"
            android:text="@string/settings_disconnection"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/settings_change_player"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/cardview_dark_background"
            android:text="@string/settings_change_player"
            android:textColor="@color/white" />
    </LinearLayout>
</layout>